[package]
name = "transr"
version = "0.2.3"
edition = "2021"
description = "A Cli to update xml tag content from csv content"
license = "MIT OR Apache-2.0"
authors = [ "Xi Xiao <tdxiaoxi2@gmail.com>" ]

[dependencies]
clap = "4"
csv = "1.3.0"
glob = "0.3.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
